ADD - Se agregan nuevos componentes (ImgBox, Companies) UPDATE - Se actualizan los componentes de Register y Homepage

--- a/src/components/core/imgPerfil/ImgPerfil.module.css
+++ b/src/components/core/imgPerfil/ImgPerfil.module.css
@@ -18,5 +18,5 @@
   align-items: center;
   justify-content: center;
   background-color: #E7E7E7;
-  border: 1px solid var(--BasicWhite);
+  border: 1px solid var(--Orange);
 }
