ADD - Se agregan nuevos componenetes (createOffer, Point, StepsCreateOffer) UPDATE - Se actualizan los componentes (Homepage, routes, MyOffers, CreateJobs)

--- a/src/components/core/subTitles/SubTitleClass.module.css
+++ b/src/components/core/subTitles/SubTitleClass.module.css
@@ -18,7 +18,8 @@ h2 {
 
 .smallTitle {
     font-size: var(--small);
-    color: var(--TTPrimary);
+    color: var(--TTTertiary);
+    text-align: center;
 }
 
 .bigTitle {
