--- a/src/components/integrated/companies/Companies.module.css
+++ b/src/components/integrated/companies/Companies.module.css
@@ -5,6 +5,7 @@
     align-items: center;
     flex-direction: column;
     justify-content: center;
+    border-top: 1px solid #E7E7E7;
 }
 
 .grid {
