ADD - Se agregan nuevos componentes (PostOfferForm) UPDATE - Se realizan actualizaciones (InputForm, CreateOffer, MyOffer)

--- a/src/components/core/inputsForms/InputForm.module.css
+++ b/src/components/core/inputsForms/InputForm.module.css
@@ -1,4 +1,4 @@
-@import "../../styles/Colors.css";
+
 
 .general {
     width: 100%;
@@ -7,3 +7,8 @@
     border-radius: 50px;
     border: 1px solid var(--Border);
 }
+
+.general::placeholder {
+    color: var(--Border);
+}
+
