--- a/src/components/core/cardJob/CardJobs.module.css
+++ b/src/components/core/cardJob/CardJobs.module.css
@@ -1,4 +1,20 @@
 .card {
-    border-radius: 5px;
-    border: 1px solid black;
+  display: grid;
+  gap: 10px;
+  cursor: pointer;
+  padding: 20px;
+  border-radius: 5px;
+  border: 1px solid var(--SecondaryGrey);
+  -webkit-box-shadow: -1px 1px 12px 2px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: -1px 1px 12px 2px rgba(0, 0, 0, 0.15);
+  box-shadow: -1px 1px 12px 2px rgba(0, 0, 0, 0.15);
+}
+
+.card:hover {
+  border: 1px solid var(--PrimaryBlue);
+}
+
+.buttons {
+  display: flex;
+  gap: 20px;
 }
