--- a/src/views/myOffers/MyOffers.module.css
+++ b/src/views/myOffers/MyOffers.module.css
@@ -4,3 +4,10 @@
     flex-direction: column;
     justify-content: center;
 }
+
+.jobs {
+    padding: 50px;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 40% 60%;
+ }
