--- a/src/views/myOffers/MyOffers.module.css
+++ b/src/views/myOffers/MyOffers.module.css
@@ -11,3 +11,9 @@
     display: grid;
     grid-template-columns: 40% 60%;
  }
+
+ .modal {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+ }
